--- a/app/views/perfumes/index.html.erb
+++ b/app/views/perfumes/index.html.erb
@@ -1,1 +1,11 @@
-<%= link_to "診断を始める", perfumes_new_1_path %>
+<div class="perfume0">
+ <%= link_to("診断を始める", perfumes_new_1_path,{class:"linkA"}) %>
+
+
+
+ <div class=textper>
+ 選択肢を選んでいくとあなたにおすすめの球場のページに飛ぶよ！！
+ </div>
+</div>
+
+
