--- a/app/views/perfumes/new_1.html.erb
+++ b/app/views/perfumes/new_1.html.erb
@@ -1,3 +1,31 @@
-観戦に行くなら仕事（学校）帰りがいい！
-<%= link_to "はい", perfumes_new_3_path %>
-<%= link_to "いいえ", perfumes_new_2_path %>
+<body>
+ <div class=box1>
+
+  <div class="textp0">
+  Q1
+  </div>
+  <div class="textp1">
+  観戦に行くなら</br>仕事（学校）帰りがいい！
+  </div>
+ </div> 
+
+ 
+
+ <div class="box2">
+ <%= link_to("YES!!", perfumes_new_3_path,{class:"linkB"}) %>
+ 
+ </div>
+
+ <div class="pic1">
+ <%= image_tag 'tsuba.png', class:"image1" %>
+ </div>
+
+ <div class="box3">
+  <%= link_to("NO!!!", perfumes_new_2_path,{class:"linkc"}) %> 
+ </div>
+
+ <div class="pic1">
+ <%= image_tag 'usagi.png', class:"image2" %>
+ </div>
+
+</body>
