--- a/app/views/perfumes/new_3.html.erb
+++ b/app/views/perfumes/new_3.html.erb
@@ -1,3 +1,31 @@
-豪華な演出を楽しみたい！
-<%= link_to "はい", perfumes_new_4_path %>
-<%= link_to "いいえ", balls_jingu_path %>
+
+
+
+
+<body>
+ <div class=box1>
+
+  <div class="textp0">
+  Q1
+  </div>
+  <div class="textp1">
+  豪華な演出を楽しみたい！
+  </div>
+ </div> 
+
+ <div class="box6">
+ <%= link_to("YES!!", perfumes_new_4_path,{class:"linkB"}) %>
+ </div>
+
+ <div class="pic1">
+ <%= image_tag 'star.png', class:"image5" %>
+ </div>
+
+ <div class="box7">
+  <%= link_to("NO!!!", balls_jingu_path,{class:"linkc"}) %> 
+ </div>
+ 
+ <div class="pic1">
+ <%= image_tag 'bay.png', class:"image6" %>
+ </div> 
+</body>
