--- a/app/views/perfumes/new_4.html.erb
+++ b/app/views/perfumes/new_4.html.erb
@@ -1,3 +1,29 @@
-観戦以外でも1日中遊びつくしたい！
-<%= link_to "はい", balls_tokyo_path %>
-<%= link_to "いいえ", balls_hama_path %>
+
+
+<body>
+ <div class=box1>
+
+  <div class="textp0">
+  Q3
+  </div>
+  <div class="textp1">
+  観戦以外でも1日中遊びつくしたい！
+  </div>
+ </div> 
+
+ <div class="box4">
+ <%= link_to("YES!!", balls_tokyo_path,{class:"linkB"}) %>
+ </div>
+
+ <div class="pic1">
+ <%= image_tag 'leo.png', class:"image3" %>
+ </div>
+
+ <div class="box5">
+  <%= link_to("NO!!!", balls_hama_path,{class:"linkc"}) %> 
+ </div>
+
+ <div class="pic1">
+ <%= image_tag 'ma-kun.png', class:"image4" %>
+ </div>
+</body>
